fix: update letter-spacing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -50,7 +50,7 @@ body {
     -webkit-user-drag: none;
 }
 
-/* Центральний контент */
+/* Центральний контент ////*/
 .content {
     display: flex;
     flex-direction: column;
@@ -66,7 +66,7 @@ body {
     padding: 14px 26px;
     font-weight: 700;
     font-size: 18px;
-    letter-spacing: .2px;
+    letter-spacing: 2px;
     margin: 10px 0;
 }
 .text {
